scss/styles.scss
@use 'variables' as *;
@use 'mixins' as *;

body {
  background-color: $bg-color;
  overflow-x: auto; 
  margin: 0; 
  padding: 0;
}

a {
  color: $secondary-color;
    text-decoration: none;
    font-family: $secondary-font;
}


// Leib's section

// Styling text
h1 {
  font-family: $main-font;
  font-size: 5rem;
  font-weight: 800;
  color: $secondary-color;
  text-align: center;
  line-height: 1.2;
}

p {
  font-family: $secondary-font;
  font-size: 1.5rem;
  color: $secondary-color;
  text-align: center;
}

button {
  background-color: $brand-color; /* Yellow background */
  border: none; /* Remove the default border */
  color: $secondary-color; /* Maroon text */
  font-family: $secondary-font;
  padding: 10px 20px; /* Padding for the button */
  text-align: center; /* Center the text */
  text-decoration: none; /* Remove underline from text */
  display: inline-block; /* Make the button inline-block */
  font-size: 16px; /* Font size */
  border-radius: 25px; /* Rounded corners */
  cursor: pointer; /* Pointer cursor on hover */
  box-shadow: 0 5px 0 0 $secondary-color; /* Offset the border using box-shadow */
  transition: transform 0.1s, box-shadow 0.1s; /* Smooth transition */
  width: 200px;
}

button:hover {
  box-shadow: 0 2px 0 0 $secondary-color; /* Slightly darker shadow on hover, reduced offset */
  transform: translateY(3px); /* Move the button downwards */
}


// Hamburger Menu
.menu-icon {
  font-size: 30px;
  cursor: pointer;
  z-index: 9999;
  position: relative;
}

#main-nav {
  display: none;
}

.nav-item {
  border-left: solid;
  border-width: 1px;
  padding: 10px 20px;
  margin: 0;
}

@media (min-width: 900px) {
  .menu-icon {
    display: none;
  }

  #main-nav {
    display: block;
  }
}

.menu {
  position: fixed;
  top: 0;
  left: -100%;
  width: 100%;
  height: 100%;
  background-color: $bg-color;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  transition: left 0.3s ease-in-out;
  z-index: 9998;
}

.menu ul {
  list-style: none;
  padding: 0;
  margin: 0;
  text-align: center;
}

.menu li {
  margin: 20px 0;
}

.menu a {
  color: $secondary-color;
  text-decoration: none;
  font-size: 24px;
  font-family: $main-font;
  font-weight: 800;
}

.menu.open {
  left: 0;
}

.menu-list {
  display: flex;
  flex-direction: column;
  align-items: space-between;
}

// General Header Styling

header {
  background-color: $brand-color;
  color: $secondary-color;
  font-family: $secondary-font;
  border-style: solid;
  border-top: 0;
  border-left: 0;
  border-right: 0;
  border-width: 1px;
}

#header-master {
  padding: 0;
}

.header-content {
  display: flex;
  justify-content: space-between;
  width: 100%;
  max-width: 1150px;
  align-items: center;
  margin: 0 auto;
}

.left-header {
  display: flex;
  align-items: center;
}

#logo-image {
  position: relative;
  z-index: 9999;
  width: 27px;
  height: 27px;
  margin-right: 10px;
}

.search {
  position: relative;
  display: inline-block;
  border-left: solid;
  border-width: 1px;
}

.search input[type="Search Recipes"] {
  font-family: $secondary-font; /* Change the font of the input text */
  padding: 10px 40px 10px 20px; /* Add padding to make space for the icon */
  border-radius: 25px; /* Rounded border */
  border: 1px solid $secondary-color; /* Border color */
  width: 100%; /* Full width */
  box-sizing: border-box; /* Include padding and border in the element's total width and height */
}

.search input[type="Search Recipes"]::placeholder {
  font-family: $secondary-font; /* Change the font of the placeholder text */
  color: $secondary-color; /* Placeholder text color */
  position: absolute;
  left: 30px;
}

.search::before {
  content: '';
  position: absolute;
  top: 50%;
  left: 5px;
  transform: translateY(-50%);
  width: 20px; /* Width of the search icon */
  height: 20px; /* Height of the search icon */
  background: url('/assets/search-icon.svg') no-repeat center center; /* Path to your search icon */
  background-size: contain; /* Ensure the icon fits within the element */
  filter: invert(11%) sepia(37%) saturate(5324%) hue-rotate(347deg) brightness(85%) contrast(103%); // Filter to match $secondary-color
}


//End of header styling --------------------------------------
//Start of hero image styling---------------------------------

.header-text {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  margin: 0 auto;
  max-width: 950px;
}

#hero-motto-text {
  font-family: $main-font;
}

// Offsetting columns examples - apply the class to the column
// .column-2 { 
//   transform: translateY(-20px); /* -20px for y=-2 */ 
// }
// Hero Images 235.53x750 px
// 24px gaps

#hero-image-grid {
  display: flex;
  flex-wrap: wrap;
  gap: 24px;
  margin: 0 auto;
  min-width: 2500px;
  overflow-x: visible;
  overflow-y: hidden;
}
.hero-container {
  display: flex;
  justify-content: center;
  margin-left: 250px;
  transform: translateY(-150px);
}

.hero-image {
  width: 298px;
  height: 360px;
  background-size: center;
  background-position:center;
  border-radius: 30px;
  background-repeat: no-repeat;
  border: 1px solid $secondary-color;
}


.column-2, .column-6 {
  transform: translateY(100px);
}

.column-3, .column-5 {
  transform: translateY(200px);
}

.column-4 {
  transform: translateY(300px);
}


//Muskan's section
.ingredients {
  background-color: $ingredientbg;
  padding: 44px 20px 50px;
}
.ingredients h2{
  color: $secondary-color;
  text-align: center;
  font-size: 30px;
  font-family: $main-font;
  font-weight: 1000;
  line-height: 32px;
  letter-spacing: -.1px;
}
#enter-item{
  display: none;
}
input{
  width: 280px;
  height: 50px;
  border-radius: 25px;
}
input[type="search"]{
  padding: 12px 18px; /* Adjust as needed */
  font-size: 1.3rem; /* Controls the size of the text */
  font-family: $secondary-font; /* Ensure your font is correct */
  letter-spacing: 0; /* Keeps the spacing */
  line-height: 1.5; 
  font-weight: 300;
}
input[type="search"]::placeholder {
  color: $secondary-color;
}
//Rob's section

//Ian's section

